--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "react-dom": "^16.13.1",
     "react-icons": "^3.10.0",
     "react-redux": "^7.2.0",
-    "react-router": "^6.0.0-alpha.5",
-    "react-router-dom": "^6.0.0-alpha.5",
+    "react-router": "6.0.0-alpha.2",
+    "react-router-dom": "6.0.0-alpha.2",
     "react-scripts": "3.4.1"
   },
   "scripts": {
